wwr_w4_contrast issues

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -110,6 +110,10 @@ s
 .hero h1, .hero article{
     position: absolute;
 }
+.hero p{
+    font-size: 17px;
+    color: #000;
+}
 h1{
     top: 10px;
     width: 100%;
